--- a/assets/bard/index.html
+++ b/assets/bard/index.html
@@ -10,7 +10,7 @@
      <link rel="apple-touch-icon" sizes="120x120" href="/favicon">
      <link rel="apple-touch-icon" sizes="76x76" href="/favicon">
      <link rel="apple-touch-icon" href="/favicon">
-     <meta property="og:image:secure_url" content="/assets/img/image.png">
+     <meta property="og:image:secure_url" content="https://github-production-user-asset-6210df.s3.amazonaws.com/141845356/282263069-da757ced-10e1-4f07-b84a-a705a8cc619f.png">
      <meta property="og:image:width" content="1280">
      <meta property="og:image:height" content="720">
      <meta property="og:site_name" content="Bardie" />
@@ -34,7 +34,7 @@
   />
   <meta
         property="twitter:image"
-        content="/assets/img/image.png"
+        content="https://github-production-user-asset-6210df.s3.amazonaws.com/141845356/282263069-da757ced-10e1-4f07-b84a-a705a8cc619f.png"
   />
   <meta property="og:url" content="" />
   <meta property="og:title" content="Bardie" />  
@@ -44,7 +44,7 @@
   />
   <meta
         property="og:image"
-        content="/assets/img/image.png"
+        content="https://github-production-user-asset-6210df.s3.amazonaws.com/141845356/282263069-da757ced-10e1-4f07-b84a-a705a8cc619f.png"
   />
   <meta property="og:type" content="website" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
