--- a/assets/bard/index.html
+++ b/assets/bard/index.html
@@ -3,50 +3,49 @@
 <head>
     <meta charset="utf-8">
     <title>Bardie</title>
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-     <link rel="shortcut icon" href="/favicon">
-     <link rel="icon" href="/favicon">
-     <link rel="apple-touch-icon" sizes="152x152" href="/favicon">
-     <link rel="apple-touch-icon" sizes="120x120" href="/favicon">
-     <link rel="apple-touch-icon" sizes="76x76" href="/favicon">
-     <link rel="apple-touch-icon" href="/favicon">
-     <meta property="og:image:secure_url" content="https://github-production-user-asset-6210df.s3.amazonaws.com/141845356/282263069-da757ced-10e1-4f07-b84a-a705a8cc619f.png">
-     <meta property="og:image:width" content="1280">
-     <meta property="og:image:height" content="720">
-     <meta property="og:site_name" content="Bardie" />
-  <meta property="og:title" content="Bardie" />
-  <meta
+    <link rel="shortcut icon" href="/favicon">
+    <link rel="icon" href="/favicon">
+    <link rel="apple-touch-icon" sizes="152x152" href="/favicon">
+    <link rel="apple-touch-icon" sizes="120x120" href="/favicon">
+    <link rel="apple-touch-icon" sizes="76x76" href="/favicon">
+    <link rel="apple-touch-icon" href="/favicon">
+    <meta property="og:image:secure_url" content="https://github-production-user-asset-6210df.s3.amazonaws.com/141845356/282263069-da757ced-10e1-4f07-b84a-a705a8cc619f.png">
+    <meta property="og:image:width" content="1280">
+    <meta property="og:image:height" content="720">
+    <meta property="og:site_name" content="Bardie" />
+    <meta property="og:title" content="Bardie" />
+    <meta
         property="og:description"
         content="Bardie is a simple chat bot that uses the Google Bard to reply to user messages. Engage in conversations with our AI-powered chat bot and experience interactive and intelligent responses. Explore the capabilities of Google Bard, your virtual assistant."
-  />
-     <meta property="twitter:card" content="summary_large_image" />
-  <meta
+    />
+    <meta property="twitter:card" content="summary_large_image" />
+    <meta
         property="twitter:url"
         content="/"
-  />
-  <meta
+    />
+    <meta
         property="twitter:title"
         content="Bardie"
-  />
-  <meta
+    />
+    <meta
         property="twitter:description"
         content="Bardie is a simple chat bot that uses the Google Bard to reply to user messages. Engage in conversations with our AI-powered chat bot and experience interactive and intelligent responses. Explore the capabilities of Google Bard, your virtual assistant."
-  />
-  <meta
+    />
+    <meta
         property="twitter:image"
         content="https://github-production-user-asset-6210df.s3.amazonaws.com/141845356/282263069-da757ced-10e1-4f07-b84a-a705a8cc619f.png"
-  />
-  <meta property="og:url" content="" />
-  <meta property="og:title" content="Bardie" />  
-  <meta
+    />
+    <meta property="og:url" content="/" />
+    <meta property="og:title" content="Bardie" />  
+    <meta
         property="og:description"
         content="Bardie is a simple chat bot that uses the Google Bard to reply to user messages. Engage in conversations with our AI-powered chat bot and experience interactive and intelligent responses. Explore the capabilities of Google Bard, your virtual assistant."
-  />
-  <meta
+    />
+    <meta
         property="og:image"
         content="https://github-production-user-asset-6210df.s3.amazonaws.com/141845356/282263069-da757ced-10e1-4f07-b84a-a705a8cc619f.png"
-  />
-  <meta property="og:type" content="website" />
+    />
+    <meta property="og:type" content="website" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta name="description" content="Bardie is a simple chat bot that uses the Google Bard to reply to user messages. Engage in conversations with our AI-powered chat bot and experience interactive and intelligent responses. Explore the capabilities of Google Bard, your virtual assistant.">
     <meta name="keywords" content="chat bot, bard, artificial intelligence, AI, google bard, Google Bard">
@@ -67,9 +66,9 @@
                 <span id="theme-btn" class="material-symbols-rounded">light_mode</span>
                 <span id="delete-btn" class="material-symbols-rounded">delete</span>
             </div>
-        </div>
-    </div>
-    <script src="/assets/js/bard.js"></script>
+       </div>
+  </div>
+<script src="/assets/js/bard.js"></script>
 <script>
   if ('serviceWorker' in navigator) {
     navigator.serviceWorker.register('/assets/js/service-worker.js')
