--- a/assets/bard/index.html
+++ b/assets/bard/index.html
@@ -49,8 +49,8 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta name="description" content="Bardie is a simple chat bot that uses the Google Bard to reply to user messages. Engage in conversations with our AI-powered chat bot and experience interactive and intelligent responses. Explore the capabilities of Google Bard, your virtual assistant.">
     <meta name="keywords" content="chat bot, bard, artificial intelligence, AI, google bard, Google Bard">
-    <link rel="manifest" href="/manifest.json">
-    <link rel="stylesheet" href="/assets/css/bard.css">
+    <link rel="manifest" href="./assets/manifest.json">
+    <link rel="stylesheet" href="./assets/css/bard.css">
     <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Material+Symbols+Rounded:opsz,wght,FILL,GRAD@20..48,100..700,0..1,-50..200" />
     <script src="https://cdn.jsdelivr.net/npm/sweetalert2@10"></script>
 </head>
@@ -68,10 +68,10 @@
             </div>
        </div>
   </div>
-<script src="/assets/js/bard.js"></script>
+<script src="./assets/js/bard.js"></script>
 <script>
   if ('serviceWorker' in navigator) {
-    navigator.serviceWorker.register('/assets/js/service-worker.js')
+    navigator.serviceWorker.register('./assets/js/service-worker.js')
       .then((registration) => {
         console.log('Service Worker registered with scope:', registration.scope);
       })
