--- a/assets/bard/index.html
+++ b/assets/bard/index.html
@@ -21,7 +21,7 @@
     <meta property="twitter:card" content="summary_large_image" />
     <meta
         property="twitter:url"
-        content="/"
+        content="https://bard.rizzy.eu.org"
     />
     <meta
         property="twitter:title"
@@ -35,7 +35,7 @@
         property="twitter:image"
         content="https://github-production-user-asset-6210df.s3.amazonaws.com/141845356/282263069-da757ced-10e1-4f07-b84a-a705a8cc619f.png"
     />
-    <meta property="og:url" content="/" />
+    <meta property="og:url" content="https://bard.rizzy.eu.org" />
     <meta property="og:title" content="Bardie" />  
     <meta
         property="og:description"
@@ -46,6 +46,7 @@
         content="https://github-production-user-asset-6210df.s3.amazonaws.com/141845356/282263069-da757ced-10e1-4f07-b84a-a705a8cc619f.png"
     />
     <meta property="og:type" content="website" />
+    <meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta name="description" content="Bardie is a simple chat bot that uses the Google Bard to reply to user messages. Engage in conversations with our AI-powered chat bot and experience interactive and intelligent responses. Explore the capabilities of Google Bard, your virtual assistant.">
     <meta name="keywords" content="chat bot, bard, artificial intelligence, AI, google bard, Google Bard">
