--- a/assets/bard/index.html
+++ b/assets/bard/index.html
@@ -3,56 +3,34 @@
 <head>
     <meta charset="utf-8">
     <title>Bardie</title>
-    <link rel="shortcut icon" href="/favicon">
-    <link rel="icon" href="/favicon">
-    <link rel="apple-touch-icon" sizes="152x152" href="/favicon">
-    <link rel="apple-touch-icon" sizes="120x120" href="/favicon">
-    <link rel="apple-touch-icon" sizes="76x76" href="/favicon">
-    <link rel="apple-touch-icon" href="/favicon">
+    <link rel="shortcut icon" href="https://www.gstatic.com/lamda/images/favicon_v1_70c80ffdf27202fd2e84f.png">
+    <link rel="icon" href="https://www.gstatic.com/lamda/images/favicon_v1_70c80ffdf27202fd2e84f.png">
+    <link rel="apple-touch-icon" sizes="152x152" href="https://www.gstatic.com/lamda/images/favicon_v1_70c80ffdf27202fd2e84f.png">
+    <link rel="apple-touch-icon" sizes="120x120" href="https://www.gstatic.com/lamda/images/favicon_v1_70c80ffdf27202fd2e84f.png">
+    <link rel="apple-touch-icon" sizes="76x76" href="https://www.gstatic.com/lamda/images/favicon_v1_70c80ffdf27202fd2e84f.png">
+    <link rel="apple-touch-icon" href="https://www.gstatic.com/lamda/images/favicon_v1_70c80ffdf27202fd2e84f.png">
     <meta property="og:image:secure_url" content="https://github-production-user-asset-6210df.s3.amazonaws.com/141845356/282263069-da757ced-10e1-4f07-b84a-a705a8cc619f.png">
     <meta property="og:image:width" content="1280">
     <meta property="og:image:height" content="720">
-    <meta property="og:site_name" content="Bardie" />
-    <meta property="og:title" content="Bardie" />
-    <meta
-        property="og:description"
-        content="Bardie is a simple chat bot that uses the Google Bard to reply to user messages. Engage in conversations with our AI-powered chat bot and experience interactive and intelligent responses. Explore the capabilities of Google Bard, your virtual assistant."
-    />
-    <meta property="twitter:card" content="summary_large_image" />
-    <meta
-        property="twitter:url"
-        content="https://bard.rizzy.eu.org"
-    />
-    <meta
-        property="twitter:title"
-        content="Bardie"
-    />
-    <meta
-        property="twitter:description"
-        content="Bardie is a simple chat bot that uses the Google Bard to reply to user messages. Engage in conversations with our AI-powered chat bot and experience interactive and intelligent responses. Explore the capabilities of Google Bard, your virtual assistant."
-    />
-    <meta
-        property="twitter:image"
-        content="https://github-production-user-asset-6210df.s3.amazonaws.com/141845356/282263069-da757ced-10e1-4f07-b84a-a705a8cc619f.png"
-    />
-    <meta property="og:url" content="https://bard.rizzy.eu.org" />
-    <meta property="og:title" content="Bardie" />  
-    <meta
-        property="og:description"
-        content="Bardie is a simple chat bot that uses the Google Bard to reply to user messages. Engage in conversations with our AI-powered chat bot and experience interactive and intelligent responses. Explore the capabilities of Google Bard, your virtual assistant."
-    />
-    <meta
-        property="og:image"
-        content="https://github-production-user-asset-6210df.s3.amazonaws.com/141845356/282263069-da757ced-10e1-4f07-b84a-a705a8cc619f.png"
-    />
-    <meta property="og:type" content="website" />
-    <meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
+    <meta property="og:site_name" content="Bardie">
+    <meta property="og:title" content="Bardie">
+    <meta property="og:description" content="Bardie is a simple chat bot that uses the Google Bard to reply to user messages. Engage in conversations with our AI-powered chat bot and experience interactive and intelligent responses. Explore the capabilities of Google Bard, your virtual assistant.">
+    <meta property="twitter:card" content="summary_large_image">
+    <meta property="twitter:url" content="https://bard.rizzy.eu.org">
+    <meta property="twitter:title" content="Bardie">                
+    <meta property="twitter:description" content="Bardie is a simple chat bot that uses the Google Bard to reply to user messages. Engage in conversations with our AI-powered chat bot and experience interactive and intelligent responses. Explore the capabilities of Google Bard, your virtual assistant.">
+    <meta property="twitter:image" content="https://github-production-user-asset-6210df.s3.amazonaws.com/141845356/282263069-da757ced-10e1-4f07-b84a-a705a8cc619f.png">
+    <meta property="og:url" content="https://bard.rizzy.eu.org">
+    <meta property="og:title" content="Bardie">  
+    <meta property="og:description" content="Bardie is a simple chat bot that uses the Google Bard to reply to user messages. Engage in conversations with our AI-powered chat bot and experience interactive and intelligent responses. Explore the capabilities of Google Bard, your virtual assistant.">
+    <meta property="og:image" content="https://github-production-user-asset-6210df.s3.amazonaws.com/141845356/282263069-da757ced-10e1-4f07-b84a-a705a8cc619f.png">
+    <meta property="og:type" content="website">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta name="description" content="Bardie is a simple chat bot that uses the Google Bard to reply to user messages. Engage in conversations with our AI-powered chat bot and experience interactive and intelligent responses. Explore the capabilities of Google Bard, your virtual assistant.">
     <meta name="keywords" content="chat bot, bard, artificial intelligence, AI, google bard, Google Bard">
     <link rel="manifest" href="/assets/js/manifest.json">
     <link rel="stylesheet" href="/assets/css/bard.css">
-    <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Material+Symbols+Rounded:opsz,wght,FILL,GRAD@20..48,100..700,0..1,-50..200" />
+    <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Material+Symbols+Rounded:opsz,wght,FILL,GRAD@20..48,100..700,0..1,-50..200">
     <script src="https://cdn.jsdelivr.net/npm/sweetalert2@10"></script>
 </head>
 <body>
