--- a/assets/bard/index.html
+++ b/assets/bard/index.html
@@ -16,11 +16,11 @@
     <meta property="og:title" content="Bardie">
     <meta property="og:description" content="Bardie is a simple chat bot that uses the Google Bard to reply to user messages. Engage in conversations with our AI-powered chat bot and experience interactive and intelligent responses. Explore the capabilities of Google Bard, your virtual assistant.">
     <meta property="twitter:card" content="summary_large_image">
-    <meta property="twitter:url" content="https://bard.rizzy.eu.org">
+    <meta property="twitter:url" content="https://bardie.cyclic.app">
     <meta property="twitter:title" content="Bardie">                
     <meta property="twitter:description" content="Bardie is a simple chat bot that uses the Google Bard to reply to user messages. Engage in conversations with our AI-powered chat bot and experience interactive and intelligent responses. Explore the capabilities of Google Bard, your virtual assistant.">
     <meta property="twitter:image" content="https://github-production-user-asset-6210df.s3.amazonaws.com/141845356/282263069-da757ced-10e1-4f07-b84a-a705a8cc619f.png">
-    <meta property="og:url" content="https://bard.rizzy.eu.org">
+    <meta property="og:url" content="https://bardie.cyclic.app">
     <meta property="og:title" content="Bardie">  
     <meta property="og:description" content="Bardie is a simple chat bot that uses the Google Bard to reply to user messages. Engage in conversations with our AI-powered chat bot and experience interactive and intelligent responses. Explore the capabilities of Google Bard, your virtual assistant.">
     <meta property="og:image" content="https://github-production-user-asset-6210df.s3.amazonaws.com/141845356/282263069-da757ced-10e1-4f07-b84a-a705a8cc619f.png">
@@ -31,6 +31,7 @@
     <link rel="manifest" href="/assets/js/manifest.json">
     <link rel="stylesheet" href="/assets/css/bard.css">
     <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Material+Symbols+Rounded:opsz,wght,FILL,GRAD@20..48,100..700,0..1,-50..200">
+    <meta name="google-site-verification" content="9PsUyecjIA0nH5yQaOlucFU5ts71Qq0kjG67rs809V0" />
     <script src="https://cdn.jsdelivr.net/npm/sweetalert2@10"></script>
 </head>
 <body>
